Double scrollbar fix

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -255,6 +255,12 @@ nav p.navbar__header {
   min-height: calc(450px - 56px);
   background-color: white;
 }
+@media only screen and (min-width: 601px)
+{
+  .main {
+    height: calc(100% - 64px);
+  }
+}
 
 .dialog-container {
   display: none;
